# t1

./: .envrc  .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  Makefile  README.md  build.mill  build.sc  common.mill  common.sc  deps.nix  docs  flake.nix  overlay.nix  readme.md  shell.nix  tests.sc
difftest/: Cargo.toml  default.nix  offline-checker-t1.nix  offline-checker-t1rocket.nix  offline-checker.nix  offline.nix  run-emulator.nix  vcs-emu.nix  vcs.nix  vcs_t1rocket.nix  verilator.nix
difftest/doc/: organization.md  rational.md
difftest/dpi_common/: Cargo.toml
difftest/dpi_common/src/: dpi_target.rs  dump.rs  lib.rs  plusarg.rs  util.rs
difftest/dpi_t1/: Cargo.toml
difftest/dpi_t1/src/: dpi.rs  drive.rs  lib.rs
difftest/dpi_t1emu/: Cargo.toml
difftest/dpi_t1emu/src/: dpi.rs  drive.rs  lib.rs
difftest/dpi_t1rocket/: Cargo.toml
difftest/dpi_t1rocket/src/: dpi.rs  drive.rs  lib.rs
difftest/dpi_t1rocketemu/: Cargo.toml
difftest/dpi_t1rocketemu/src/: bus.rs  dpi.rs  dramsim3-config.ini  drive.rs  interconnect.rs  lib.rs
difftest/dpi_t1rocketemu/src/bus/: disp.rs  mem.rs
difftest/dpi_t1rocketemu/src/interconnect/: framebuffer.rs  simctrl.rs
difftest/libspike_interfaces/: CMakeLists.txt  default.nix  spike_interfaces.cc  spike_interfaces.h  spike_interfaces_c.h
difftest/libspike_rs/: Cargo.toml
difftest/libspike_rs/src/: c_interface.rs  lib.rs  spike_event.rs
difftest/offline/: Cargo.toml
difftest/offline/src/: difftest.rs  dut.rs  json_events.rs  main.rs  spike_handle.rs
difftest/offline_common/: Cargo.toml
difftest/offline_common/src/: lib.rs
difftest/offline_difftest/: .rustfmt.toml  Cargo.toml  default.nix
difftest/offline_difftest/src/: difftest.rs  main.rs  spike.rs
difftest/offline_difftest/src/difftest/: dut.rs  spike.rs
difftest/offline_t1/: Cargo.toml
difftest/offline_t1/src/: json_events.rs
difftest/offline_t1emu/: Cargo.toml
difftest/offline_t1emu/src/: difftest.rs  dut.rs  json_events.rs  main.rs
difftest/offline_t1rocket/: Cargo.toml
difftest/offline_t1rocket/src/: difftest.rs  dut.rs  json_events.rs  main.rs
difftest/offline_t1rocketemu/: Cargo.toml
difftest/offline_t1rocketemu/src/: difftest.rs  dut.rs  json_events.rs  main.rs
difftest/online_dpi/: Cargo.toml
difftest/online_dpi/src/: dpi.rs  drive.rs  lib.rs  svdpi.rs  svvpi.rs
difftest/online_dpi/src/svdpi/: sys.rs
difftest/online_drive/: Cargo.toml  build.rs
difftest/online_drive/dpi_c/: CMakeLists.txt  dpi.cc  dpi.h  dpi_pre_link.cc  dpi_pre_link.h  verilator_main.cc
difftest/online_drive/src/: dpi.rs  dpi_bind.rs  drive.rs  main.rs
difftest/online_drive/verilator_shim/: CMakeLists.txt
difftest/online_vcs/: Cargo.toml  build.rs  default.nix
difftest/online_vcs/src/: lib.rs  main.rs
difftest/spike_interfaces/: CMakeLists.txt  default.nix  spike_interfaces.cc  spike_interfaces.h  spike_interfaces_c.h  t1emu.cc
difftest/spike_rs/: Cargo.toml  build.rs
difftest/spike_rs/src/: lib.rs  runner.rs  spike_event.rs  util.rs
difftest/t1-sim-checker/: Cargo.toml
difftest/t1-sim-checker/src/: main.rs  util.rs
difftest/t1-sim-checker/src/t1emu/: difftest.rs  json_events.rs  mod.rs
difftest/t1-sim-checker/src/t1rocketemu/: difftest.rs  json_events.rs  mod.rs
difftest/t1-simulator/: Cargo.toml  default.nix  readme.md
difftest/t1-simulator/src/: difftest.rs  main.rs  spike.rs
difftest/t1devices/: Cargo.toml
difftest/t1devices/src/: framebuffer.rs  lib.rs  simctrl.rs
difftest/t1emu/: Cargo.toml  build.rs
difftest/t1emu/src/: main.rs  spike.rs
difftest/test_common/: Cargo.toml
difftest/test_common/src/: lib.rs  spike_runner.rs
doc/: cover.md  (+3 more)
ipemu/csrc/: CMakeLists.txt  dpi.cc  elf.cc  encoding.h  exceptions.h  ipemu.cc  ipemu.h  memory.h  perf.h  rtl_config.cc  rtl_config.h  simple_sim.h  spdlog-ext.cc  spdlog-ext.h  spdlog_ext.cc  spdlog_ext.h  spike_event.cc  spike_event.h  systolic.cc  systolic.h  uartlite.h  util.h  vbridge_impl.cc  vbridge_impl.h
ipemu/csrc/include/: dpi.h
ipemu/csrc/verilator/: CMakeLists.txt  dpi.cpp  dpi.h  main.cpp
pokedex/simulator/: Cargo.toml  build.rs  package.nix
pokedex/simulator/assets/: configs.kdl
pokedex/simulator/batchrun/: Cargo.toml  batchrun.py  batchrun_cfg.example.json
pokedex/simulator/difftest/: Cargo.toml
pokedex/simulator/include/: pokedex_interface.h
pokedex/simulator/pokedex/: Cargo.toml  asl_export.h  build.rs
pokedex/simulator/src/: bus.rs  common.rs  main.rs  model.rs  util.rs
pokedex/tests/: .gitignore  README.md  all-diffs.nix  batch-difftest.nix  default.nix  difftest-meta.nix  difftest.py  main.S  make-diff-env.nix  makefile  meson.build  meson.options  package.nix  pokedex-config.kdl  pokedex-log.nix  readme.md  run-test-elf.nix  runner.nix  test.c
pokedex/tests/compile-stubs/: main.S  script.ld
pokedex/tests/nix/: prebuilt-cases.nix  run.nix
pokedex/tests/riscv-tests/: Makefile  case_list.txt  fp_case_list.txt  meson.build  package.nix
pokedex/tests/riscv-tests-env/: riscv_test.h
pokedex/tests/riscv-vector-tests/: Makefile  case_list.txt  meson.build  package.nix
pokedex/tests/smoke/: Makefile  meson.build  package.nix  smt.S
pokedex/tests/smoke_v/: Makefile  meson.build  package.nix  vsetvl.S
pokedex/tests/utils/: main.S  script.ld
profiler/profiler/: Cargo.toml
profiler/profiler/src/: events.rs  fst_writer.rs  main.rs  parse.rs  writer.rs
rocketemu/dpi/: CMakeLists.txt  default.nix  dpi.cc  dpi.h  dpi_pre_link.cc  dpi_pre_link.h
rocketemu/driver/: .rustfmt.toml  Cargo.toml  build.rs  default.nix  result
rocketemu/driver/src/: dpi.rs  main.rs  sim.rs
t1rocketemu/online_dpi/: Cargo.toml
t1rocketemu/online_dpi/src/: dpi.rs  drive.rs  lib.rs  svdpi.rs  svvpi.rs
t1rocketemu/spike_interfaces/: CMakeLists.txt  default.nix  spike_interfaces-config.cmake  spike_interfaces.cc  spike_interfaces.h  spike_interfaces_c.h
tests/disp/lvgl/: CMakeLists.txt  README.md  lv_conf.h  main.c  toolchain.cmake
v/tests/resources/: CMakeLists.txt  main.cc  simple_sim.h  util.h  vbridge.cc  vbridge.h
vbridge/: CMakeLists.txt
(+3375 files in other folders)
