[workspace]
resolver = "2"
members = [
    "test_common",
    "spike_rs",
    "offline_t1",
    "dpi_t1",
    "dpi_t1rocket",
    "dpi_common",
]
exclude = [
    "spike_interfaces"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.6"
svdpi = "0.0.1"
