[package]
name = "dpi_t1emu"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
dpi_common = { path = "../dpi_common" }
spike_rs = { path = "../spike_rs" }
tracing = { workspace = true }
svdpi = { workspace = true }
hex = "0.4.3"

[features]
