[package]
name = "t1-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
libloading = "0.8.1"
xmas-elf = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

libspike_rs = { path = "../libspike_rs" }
