[package]
name = "offline_common"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }

spike_rs = { path = "../spike_rs" }
