[package]
name = "offline_difftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
libc = "0.2.153"
libloading = "0.8.1"
xmas-elf = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

