[package]
name = "offline_t1emu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }

libloading = "0.8.1"
xmas-elf = "0.9.1"

spike_rs = { path = "../spike_rs" }
