[package]
name = "online_dpi"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../test_common" }
spike_rs = { path = "../spike_rs" }
clap = { workspace = true }
tracing = { workspace = true }
svdpi = { workspace = true }
hex = "0.4.3"

[features]
trace = []
