[package]
name = "t1-sim-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }

spike_rs = { path = "../spike_rs" }

xmas-elf = "0.9.1"
