[workspace]
resolver = "2"
members = [ "pokedex", "difftest" ]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hex = "0.4.3"
thiserror = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
zerocopy = "0.8"
