[package]
name = "pokedex"
version = "0.1.0"
edition = "2024"

[features]
bundled-model-lib = []

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
libc = "0.2.177"
hex = "0.4.3"
thiserror = "2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
knuffel = "3.2.0"
zerocopy = "0.8"
xmas-elf = "0.9.1"
num = "0.4.3"
gdbstub = "0.7.8"
gdbstub_arch = "0.3.2"
