option('xlen',                type: 'integer', value: 32,                         description: 'XLEN')
option('vlen',                type: 'integer', value: 128,                        description: 'VLEN')
option('abi',                 type: 'string',  value: 'ilp32f',                   description: 'ABI')
option('march',               type: 'string',  value: 'rv32imafc_zvl256b_zve32f', description: 'Architecture')
option('zve32f',              type: 'feature', value: 'enabled',                  description: 'Vector has FP Support')
option('scalar_fp',           type: 'feature', value: 'enabled',                  description: 'Scalar has FP Support')
option('riscv_tests_src',     type: 'string',  value: '',                         description: 'Path to riscv-tests sources')
option('codegen_install_dir', type: 'string',  value: '',                         description: 'Path to riscv-vector-tests sources')
option('with_tests',          type: 'feature', value: 'disabled',                 description: 'Enable testing')
option('prebuilt_case_dir',   type: 'string',  value: '',                         description: 'Path to existing ELFs (skips building ELF)')
