[package]
name = "t1-profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
fstapi = "0.0.2"
fst-sys.path = "../fst-sys"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
zstd = "0.13.1"
