[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
elf = "0.7.4"
anyhow = "1.0.86"
hex = "0.4.3"

[features]
trace = []
