[package]
name = "difftest"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
glob = "0.3.2"
# Rust standard process library have unexpected behavior of finding exeuctable in PATH.
which = "7.0.3"
indoc = "2"
wait-timeout = "0.2.1"
