[package]
name = "difftest"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
knuffel = { workspace = true }
miette = { workspace = true }
indoc = "2"
num-bigint = "0.4.6"
